[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moead"
version = "1.0.0"
description = "Framework de optimización multiobjetivo para NAS"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Thomas", email = "thomas.molina@pucv.cl"}
]
dependencies = [
    "numpy",
    "tensorflow",
    "matplotlib",
    "scipy",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moead*"]